--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="image-container">
-        <img src="images/land.jpg" alt="click here">
+        <img src="Images/land.jpg" alt="click here">
       </div>
     </div>
   </main>
