broken image- Update contact.html

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
       <div class="welcome-text">
 
 <body>
-<img src="images/marahbefore.jpeg" alt="BrokenImage" width="200" height="200">
+<img src="Images/marahbefore.jpeg" alt="BrokenImage" width="200" height="200">
 <h1>Contact</h1>
 <p> We're thrilled that you're interested in connecting with us. Whether you have a burning question, a collaboration idea, or just want to say hello, we're here and ready to chat. Feel free to reach out using the form below, and we'll get back to you as soon as possible. Your feedback and inquiries are important to us, and we look forward to the opportunity to engage with you. Thank you for considering us, and we can't wait to hear from you!</p>
 
