--- a/aboutme.html
+++ b/aboutme.html
@@ -101,7 +101,7 @@
  
         <div class="container">
           <div class="left-column">
-            <img src="images/marahbefore.jpeg" alt="marahbefore" onmouseover="changeImage(this, 'images/marahafter.jpeg')" onmouseout="changeImage(this, 'images/marahbefore.jpeg')">
+            <img src="Images/marahbefore.jpeg" alt="marahbefore" onmouseover="changeImage(this, 'Images/marahafter.jpeg')" onmouseout="changeImage(this, 'images/marahbefore.jpeg')">
             <a href="#" class="contact-button">Contact</a>
         </div>
         <div class="right-column">
