--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         height: 100%;
         margin: 0;
     }
-    .container {
+    .containerMitch {
         display: flex;
         height: 100vh;
     }
