--- a/aboutme.html
+++ b/aboutme.html
@@ -119,6 +119,74 @@
   }
 
 </script>
+  <!--</footer>-------------------->
+
+<div >
+  <footer>
+    <ul>
+      <li>Copyright 2023 - Deb, Balsam, Sally, Mitch, Marah, James</li>
+      <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+      <li>
+        <div class = "footerDiv">
+          <!-- A button to open the popup form -->
+          <button class="open-button" id="open-button" onclick="openForm()">Admin Login</button>
+
+          <!-- The form -->
+          <div class="form-popup" id="myForm">
+            <form action= "JavaScript:passwordCheck()" class="form-container">
+              <h1>Admin Login</h1>
+
+              <label for="psw"><b>Password</b></label>
+              <input id="psw" type="password" placeholder="Enter Password" name="psw" autocomplete="new-password" required >
+              <div id = pwMessage></div>
+              <button type="submit" class="btn">Login</button>
+              <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+            </form>
+
+          </div> 
+        </div>
+      </li>
+    </ul>
+  </footer>
+</div>
+  <script src="script.js"></script>
+</div>
+</body>
+<script type="text/javascript">
+  var pwd = document.querySelector("#psw");
+  var pswMsg = document.querySelector("#pwMessage");
+
+  function openForm() {
+    pswMsg.textContent = "";
+    document.getElementById("open-button").style.display = "none";
+    document.getElementById("myForm").style.display = "block";
+  }
+
+  function closeForm() {
+    document.getElementById("myForm").style.display = "none";
+    document.getElementById("open-button").style.display = "block";
+  } 
+
+  function passwordCheck(){
+    var pass = document.querySelector("#psw");
+    var authPass = "password"
+// ********* It is never good to store a password in plain text on the front end ********
+
+    if (pass.value == authPass){
+    location.href = "adminpanelview.html";
+      pswMsg.textContent = "correct!";
+    }
+    else
+    {
+      closeForm(); //close and open to reset the form
+      openForm();
+      pswMsg.style.color = "red";
+      pswMsg.style.fontSize = "small";
+      pswMsg.textContent = "Incorrect password, try again";
+    }
+  }
+
+</script>
 
 </body>
 </html>
