--- a/aboutme.html
+++ b/aboutme.html
@@ -83,8 +83,8 @@
             <a href="DebbyPortfolio.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
               <!--        <a href="debby.html">Debby</a> -->
-              <a href="lucas.html">Lucas</a>
-              <a href="SallyPortfolio.html">Portfolio2</a>
+              <a href="lucas.html">Collection 1</a>
+              <a href="SallyPortfolio.html">Collection 2</a>
           </div>
       </li>
       <li><a href="contact.html">Contact Us</a></li>  <!-- mailto:bhw04@mail.aub.edu -->
@@ -98,7 +98,6 @@
       <div class="welcome-text">
 
 
- 
         <div class="container">
           <div class="left-column">
             <img src="Images/marahbefore.jpeg" alt="marahbefore" onmouseover="changeImage(this, 'Images/marahafter.jpeg')" onmouseout="changeImage(this, 'images/marahbefore.jpeg')">
@@ -119,8 +118,9 @@
   }
 
 </script>
-  <!--</footer>-------------------->
+</main>
 
+<!--</footer>-------------------->
 <div >
   <footer>
     <ul>
@@ -151,7 +151,7 @@
 </div>
   <script src="script.js"></script>
 </div>
-</body>
+
 <script type="text/javascript">
   var pwd = document.querySelector("#psw");
   var pswMsg = document.querySelector("#pwMessage");
