--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="DebbyPortfolio.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <!--        <a href="debby.html">Debby</a> -->
-          <a href="lucas.html">Lucas</a>
-          <a href="SallyPortfolio.html">Portfolio2</a>
+          <a href="lucas.html">Collection 1</a>
+          <a href="SallyPortfolio.html">Collection 2</a>
         </div>
       </li>
       <li><a href="contact.html">Contact Us</a></li>  <!-- mailto:bhw04@mail.aub.edu -->
@@ -75,11 +75,10 @@
       </div>
     </div>
   </div>
-  <!--</footer>-->
+  <!--</footer>-------------------->
 
 <div >
   <footer>
-
     <ul>
       <li>Copyright 2023 - Deb, Balsam, Sally, Mitch, Marah, James</li>
       <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
