--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://kit.fontawesome.com/8f955d604c.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/8f955d604c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-      <div id="container">
+  <div id="container">
    <nav>
     <ul>
       <li><a href="index.html"><i class="fas fa-home" style="color: black;"></i></a></li>
@@ -19,67 +19,137 @@
         <a href="DebbyPortfolio.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <!--        <a href="debby.html">Debby</a> -->
-          <a href="lucas.html">Lucas</a>
-          <a href="SallyPortfolio.html">Portfolio2</a>
-        </div>
-      </li>
-      <li><a href="contact.html">Contact Us</a></li>  <!-- mailto:bhw04@mail.aub.edu -->
+          <a href="lucas.html">Collection 1</a>
+          <a href="SallyPortfolio.html">Collection 2</a>
+      </div>
+  </li>
+  <li><a href="contact.html">Contact Us</a></li>  <!-- mailto:bhw04@mail.aub.edu -->
 
-    </ul>
-  </nav>
+</ul>
+</nav>
 
 
-  <main>
+<main>
     <div class="welcome-container">
       <div class="welcome-text">
-   <div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
-    <h2>Project 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-<div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
-    <img src="https://drive.google.com/uc?export=view&id=1Suqu8kWC0a96M9LhyvES_n9y_K0TViq_" width="500" alt="Atelir Mboka Header"/>
-</div>
+         <div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
+            <h2>Project 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
+            <img src="https://drive.google.com/uc?export=view&id=1Suqu8kWC0a96M9LhyvES_n9y_K0TViq_" width="500" alt="Atelir Mboka Header"/>
+        </div>
 
-<div style="margin: 0 auto; text-align: center; width: 100%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
-    <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="300" alt="Atelir Mboka Header"/>
-</div>
+        <div style="margin: 0 auto; text-align: center; width: 100%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
+            <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="300" alt="Atelir Mboka Header"/>
+        </div>
 
-<div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
-    <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="500" alt="Atelir Mboka box 1"/>
-</div>
+        <div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
+            <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="500" alt="Atelir Mboka box 1"/>
+        </div>
 
-<div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
-    <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="500" alt="Atelir Mboka box 2"/>
-</div>
+        <div style="float: left; width: 50%; margin-bottom: 20px;"> <!-- Add margin-bottom to create space between divs -->
+            <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="500" alt="Atelir Mboka box 2"/>
+        </div>
 
-<div style="clear: both;"></div>
+        <div style="clear: both;"></div>
 
-</div></div>
-<script>
+    </div></div>
 
-    var img1 = document.getElementById("i1");
-    img1.addEventListener("mouseover", changeImage);
-    img1.addEventListener("mouseout", changeBack);
+    <script>
 
-    var img2 = document.getElementById("i2");
-    img2.addEventListener("mouseover", changeImage);
-    img2.addEventListener("mouseout", changeBack);
+        var img1 = document.getElementById("i1");
+        img1.addEventListener("mouseover", changeImage);
+        img1.addEventListener("mouseout", changeBack);
 
-    function changeImage() {
-        if (this.id === "i1") {
-            this.src = "https://drive.google.com/uc?export=view&id=1lxZLun719hlUI8TBW9WlFtdyZuzjOQLH";
-        } else if (this.id === "i2") {
-            this.src = "https://drive.google.com/uc?export=view&id=1fM51oJqYK6wkzOp6JGTNQftVt2NdO884";
+        var img2 = document.getElementById("i2");
+        img2.addEventListener("mouseover", changeImage);
+        img2.addEventListener("mouseout", changeBack);
+
+        function changeImage() {
+            if (this.id === "i1") {
+                this.src = "https://drive.google.com/uc?export=view&id=1lxZLun719hlUI8TBW9WlFtdyZuzjOQLH";
+            } else if (this.id === "i2") {
+                this.src = "https://drive.google.com/uc?export=view&id=1fM51oJqYK6wkzOp6JGTNQftVt2NdO884";
+            }
         }
-    }
 
-    function changeBack() {
-        if (this.id === "i1") {
-            this.src = "https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV";
-        } else if (this.id === "i2") {
-            this.src = "https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH";
+        function changeBack() {
+            if (this.id === "i1") {
+                this.src = "https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV";
+            } else if (this.id === "i2") {
+                this.src = "https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH";
+            }
         }
+
+    </script>
+</main>
+
+    <!--</footer>-------------------->
+    <div >
+      <footer>
+        <ul>
+          <li>Copyright 2023 - Deb, Balsam, Sally, Mitch, Marah, James</li>
+          <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+          <li>
+            <div class = "footerDiv">
+              <!-- A button to open the popup form -->
+              <button class="open-button" id="open-button" onclick="openForm()">Admin Login</button>
+
+              <!-- The form -->
+              <div class="form-popup" id="myForm">
+                <form action= "JavaScript:passwordCheck()" class="form-container">
+                  <h1>Admin Login</h1>
+
+                  <label for="psw"><b>Password</b></label>
+                  <input id="psw" type="password" placeholder="Enter Password" name="psw" autocomplete="new-password" required >
+                  <div id = pwMessage></div>
+                  <button type="submit" class="btn">Login</button>
+                  <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+              </form>
+
+          </div> 
+      </div>
+  </li>
+</ul>
+</footer>
+</div>
+<script src="script.js"></script>
+</div>
+
+<script type="text/javascript">
+  var pwd = document.querySelector("#psw");
+  var pswMsg = document.querySelector("#pwMessage");
+
+  function openForm() {
+    pswMsg.textContent = "";
+    document.getElementById("open-button").style.display = "none";
+    document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+    document.getElementById("myForm").style.display = "none";
+    document.getElementById("open-button").style.display = "block";
+} 
+
+function passwordCheck(){
+    var pass = document.querySelector("#psw");
+    var authPass = "password"
+// ********* It is never good to store a password in plain text on the front end ********
+
+    if (pass.value == authPass){
+        location.href = "adminpanelview.html";
+        pswMsg.textContent = "correct!";
     }
+    else
+    {
+      closeForm(); //close and open to reset the form
+      openForm();
+      pswMsg.style.color = "red";
+      pswMsg.style.fontSize = "small";
+      pswMsg.textContent = "Incorrect password, try again";
+  }
+}
 
 </script>
 </body>
