--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,8 @@
             <a href="DebbyPortfolio.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
               <!--        <a href="debby.html">Debby</a> -->
-              <a href="lucas.html">Lucas</a>
-              <a href="SallyPortfolio.html">Portfolio2</a>
+              <a href="lucas.html">Collection 1</a>
+              <a href="SallyPortfolio.html">Collection 2</a>
           </div>
       </li>
       <li><a href="contact.html">Contact Us</a></li>  <!-- mailto:bhw04@mail.aub.edu -->
@@ -99,41 +99,111 @@
     <div class="welcome-container">
       <div class="welcome-text">
 
-<body>
-<img src="Images/marahbefore.jpeg" alt="BrokenImage" width="200" height="200">
-<h1>Contact</h1>
-<p> We're thrilled that you're interested in connecting with us. Whether you have a burning question, a collaboration idea, or just want to say hello, we're here and ready to chat. Feel free to reach out using the form below, and we'll get back to you as soon as possible. Your feedback and inquiries are important to us, and we look forward to the opportunity to engage with you. Thank you for considering us, and we can't wait to hear from you!</p>
+        <body>
+            <img src="Images/marahbefore.jpeg" alt="BrokenImage" width="200" height="200">
+            <h1>Contact</h1>
+            <p> We're thrilled that you're interested in connecting with us. Whether you have a burning question, a collaboration idea, or just want to say hello, we're here and ready to chat. Feel free to reach out using the form below, and we'll get back to you as soon as possible. Your feedback and inquiries are important to us, and we look forward to the opportunity to engage with you. Thank you for considering us, and we can't wait to hear from you!</p>
 
-<form onsubmit="return validateForm()">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name"><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email">
-  <div></div>
-  <textarea id="message" name="message" rows="4" cols="50"></textarea>
-  <div></div>
-   <input type="submit" value="Submit">
-</form>
-<p id="result" style="color: white;" >test</p>
+            <form onsubmit="return validateForm()">
+              <label for="name">Name:</label><br>
+              <input type="text" id="name" name="name"><br>
+              <label for="email">Email:</label><br>
+              <input type="email" id="email" name="email">
+              <div></div>
+              <textarea id="message" name="message" rows="4" cols="50"></textarea>
+              <div></div>
+              <input type="submit" value="Submit">
+          </form>
+          <p id="result" style="color: white;" >test</p>
 
-<script>
-function validateForm() {
-  var name = document.getElementById("name").value;
-  var email = document.getElementById("email").value;
-  var message = document.getElementById("message").value;
+          <script>
+            function validateForm() {
+              var name = document.getElementById("name").value;
+              var email = document.getElementById("email").value;
+              var message = document.getElementById("message").value;
 
-  if (name === "" || email === "" || message === "") {
-    document.getElementById("result").innerHTML = "<span style='color: red;'>Please make sure to input information </span>";
-    return false;
-  } else {
-    document.getElementById("result").innerHTML = " <span style='color: green;'Form submitted successfully! </span>";
-    alert("Thanks for your submission!")
-    return true;
-  }
-}
-	
-</script>
+              if (name === "" || email === "" || message === "") {
+                document.getElementById("result").innerHTML = "<span style='color: red;'>Please make sure to input information </span>";
+                return false;
+            } else {
+                document.getElementById("result").innerHTML = " <span style='color: green;'Form submitted successfully! </span>";
+                alert("Thanks for your submission!")
+                return true;
+            }
+        }
 
-</body>
+            </script>
+
+
+
+        </body>
 </div></div></main>
+
+<!--</footer>-------------------->
+<div >
+  <footer>
+    <ul>
+      <li>Copyright 2023 - Deb, Balsam, Sally, Mitch, Marah, James</li>
+      <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+      <li>
+        <div class = "footerDiv">
+          <!-- A button to open the popup form -->
+          <button class="open-button" id="open-button" onclick="openForm()">Admin Login</button>
+
+          <!-- The form -->
+          <div class="form-popup" id="myForm">
+            <form action= "JavaScript:passwordCheck()" class="form-container">
+              <h1>Admin Login</h1>
+
+              <label for="psw"><b>Password</b></label>
+              <input id="psw" type="password" placeholder="Enter Password" name="psw" autocomplete="new-password" required >
+              <div id = pwMessage></div>
+              <button type="submit" class="btn">Login</button>
+              <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+            </form>
+
+          </div> 
+        </div>
+      </li>
+    </ul>
+  </footer>
+</div>
+  <script src="script.js"></script>
+</div>
+
+<script type="text/javascript">
+  var pwd = document.querySelector("#psw");
+  var pswMsg = document.querySelector("#pwMessage");
+
+  function openForm() {
+    pswMsg.textContent = "";
+    document.getElementById("open-button").style.display = "none";
+    document.getElementById("myForm").style.display = "block";
+  }
+
+  function closeForm() {
+    document.getElementById("myForm").style.display = "none";
+    document.getElementById("open-button").style.display = "block";
+  } 
+
+  function passwordCheck(){
+    var pass = document.querySelector("#psw");
+    var authPass = "password"
+// ********* It is never good to store a password in plain text on the front end ********
+
+    if (pass.value == authPass){
+    location.href = "adminpanelview.html";
+      pswMsg.textContent = "correct!";
+    }
+    else
+    {
+      closeForm(); //close and open to reset the form
+      openForm();
+      pswMsg.style.color = "red";
+      pswMsg.style.fontSize = "small";
+      pswMsg.textContent = "Incorrect password, try again";
+    }
+  }
+
+</script>
 </html>
