fixed Marah images
there was a case mismatch

--- a/aboutme.html
+++ b/aboutme.html
@@ -100,7 +100,7 @@
 
         <div class="container">
           <div class="left-column">
-            <img src="Images/marahbefore.jpeg" alt="marahbefore" onmouseover="changeImage(this, 'Images/marahafter.jpeg')" onmouseout="changeImage(this, 'images/marahbefore.jpeg')">
+            <img src="Images/marahbefore.jpeg" alt="marahbefore" onmouseover="changeImage(this, 'Images/marahafter.jpeg')" onmouseout="changeImage(this, 'Images/marahbefore.jpeg')">
             <a href="#" class="contact-button">Contact</a>
         </div>
         <div class="right-column">
