--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -44,11 +44,11 @@
             <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="700" alt="Atelir Mboka logo"/>
         </div>
 
-        <div style="float: left; width: 50%; margin-bottom: 20px;"> 
+        <div style="float: left; margin-bottom: 20px;"> 
             <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="500" alt="Atelir Mboka box 1"/>
         </div>
 
-        <div style="float: right; width: 50%; margin-bottom: 20px;"> 
+        <div style="float: right; margin-bottom: 20px;"> 
             <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="500" alt="Atelir Mboka box 2"/>
         </div>
 
