--- a/adminpanelview.html
+++ b/adminpanelview.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Admin Panel</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/8f955d604c.js" crossorigin="anonymous"></script>
@@ -19,37 +20,99 @@
   .centered-div {
     border: 3px solid #f1f1f1;
     padding: 10px;
+    clear: both;
   }
+
+  .fileDir {
+    border: 1px Solid #000000;
+    padding: 10px;
+    width: 50%;
+  }
+
+  .btnSelectAll, .btnDeselect, .btnDel, .btnUp {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: relative;
+
+  width: 150px;
+}
+
 </style>
 
 <body>
-
-
+ <div id="container">
+   <nav>
+    <ul>
+      <li><a href="index.html"><i class="fas fa-home" style="color: black;"></i>Log Out</a> </li>
+    </ul>
+  </nav>
 
   <div class = "centered-div" id = "Directory">
-    <form action="delButton()" border = "1">
-      <input type="checkbox" id="page1" name="page1" value="Home">
-      <label for="page1"> Home</label><br>
-      <input type="checkbox" id="page2" name="page2" value="AboutMe">
-      <label for="page2"> About</label><br>
-      <input type="checkbox" id="page3" name="page3" value="Collections">
-      <label for="page3"> Collections</label><br>
-      <input type="checkbox" id="page4" name="page4" value="Contact">
-      <label for="page1"> Contact</label><br>
-      <input type="checkbox" id="page5" name="page5" value="Portfolio">
-      <label for="page2"> Portfolio</label><br>
-      <input type="checkbox" id="page6" name="page6" value="Portfolio2">
-      <label for="page3"> Portfolio2</label><br><br>
-      <button type="submit" class="btnDel" onclick="DelButton()">Delete</button>
-      <button type="button" class="btnUp" onclick="DelButton()">Upload</button>
+    <label> Website Directory: rowanja.github.io/
+      <br>
+      <div class = "fileDir" id = "fileDir">
+
+        <form action="delButton()" border = "1">
+          <input type="checkbox" id="page1" name="page1" value="Home">
+          <label for="page1"> Home</label><br>
+          <input type="checkbox" id="page2" name="page2" value="AboutMe">
+          <label for="page2"> About</label><br>
+          <input type="checkbox" id="page3" name="page3" value="Portfolio">
+          <label for="page3"> Portfolio</label><br>
+          <input type="checkbox" id="page4" name="page4" value="Contact">
+          <label for="page1"> Contact</label><br>
+          <input type="checkbox" id="page5" name="page5" value="Collection1">
+          <label for="page2"> Collection1</label><br>
+          <input type="checkbox" id="page6" name="page6" value="Collection 2">
+          <label for="page3"> Collection2</label><br><br>
+        </form>
+</div><br>
+        <button type="button" class="btnSelectAll" onclick="checkAll()">Select All</button>
+        <button type="button" class="btnDeselect" onclick="deselect()">Deselect</button>
+        <button type="button" class="btnDel" onclick="button(this)">Delete</button>
+        <button type="button" class="btnUp" onclick="button(this)">Upload</button>
    <!--   <input type="button" value="Delete" onclick="">
       <input type="button" Value="Upload">
     -->
-  </form>
-  <p id = "buttonMessage"></p>
-  </div>
-</div>
 
+  
+  <p id = "buttonMessage"></p>
+</div>
+</div>
+<script type="text/javascript">
+  var buttonMsg = document.querySelector("#buttonMessage");
+
+  function button(thisBtn){
+    buttonMsg.style.color = "red";
+    buttonMsg.style.fontSize = "small";
+
+    if(thisBtn.getAttribute("class") == "btnDel")
+      buttonMsg.textContent = "Cannot Reach Servers at this time.";
+    else if(thisBtn.getAttribute("class") == "btnUp")
+      buttonMsg.textContent = "Cannot Upload files - Cannot Reach Servers at this time.";
+    else
+      buttonMsg.textContent = "Error";
+
+  //alert(buttonMSG);
+  }
+
+  function checkAll() {
+      var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+      checkboxes.forEach(function(checkbox) {checkbox.checked = true});
+      buttonMsg.textContent = "";
+    }
+
+  function deselect() {
+      var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+      checkboxes.forEach(function(checkbox) {checkbox.checked = false});
+      buttonMsg.textContent = "";
+    }
+
+/*testing some stuff
   var dir = document.querySelector("#directory");
 // Get the current URL
   var currentUrl = window.location.href;
@@ -67,7 +130,7 @@
   function DelButton(){
     alert("notnow");
   }
-
+*/
 
 
 </script>
