--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -40,16 +40,16 @@
             <img src="https://drive.google.com/uc?export=view&id=10q28QbLuU3ayhmeZRMDzm03kk3T3zopt" width="500" alt="Atelir Mboka Header"/>
         </div>
 
-        <div style="float: left; margin-bottom: 20px;">
+        <div style="margin: 0 auto; text-align: center; width: 100%; margin-bottom: 20px;">
             <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="500" alt="Atelir Mboka logo"/>
         </div>
 
         <div style="float: right; margin-bottom: 20px;"> 
-            <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="500" alt="Atelir Mboka box 1"/>
+            <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="300" alt="Atelir Mboka box 1"/>
         </div>
 
         <div style="float: left; margin-bottom: 20px;"> 
-            <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="500" alt="Atelir Mboka box 2"/>
+            <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="300" alt="Atelir Mboka box 2"/>
         </div>
 
         <div style="clear: both;"></div>
