--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -36,7 +36,7 @@
             <h1>Project 1</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div> 
+        <div style="float: right; width: 50%; margin-bottom: 20px;"> 
             <img src="https://drive.google.com/uc?export=view&id=10q28QbLuU3ayhmeZRMDzm03kk3T3zopt" width="500" alt="Atelir Mboka Header"/>
         </div>
 
@@ -45,11 +45,11 @@
         </div>
 
         <div style="float: right; margin-bottom: 20px;"> 
-            <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="300" alt="Atelir Mboka box 1"/>
+            <img id="i1" src="https://drive.google.com/uc?export=view&id=1sp5CdXjr7tmDKMYaKd7ChXuib-KZ_wlV" width="400" alt="Atelir Mboka box 1"/>
         </div>
 
         <div style="float: left; margin-bottom: 20px;"> 
-            <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="300" alt="Atelir Mboka box 2"/>
+            <img id="i2" src="https://drive.google.com/uc?export=view&id=11kwiDZ_bpEoEGEY6b6brcFU_9tmyVoaH" width="400" alt="Atelir Mboka box 2"/>
         </div>
 
         <div style="clear: both;"></div>
