--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -33,14 +33,14 @@
     <div class="welcome-container">
       <div class="welcome-text">
         <div style="text-align: center; margin-bottom: 20px;"> 
-            <h1>Project 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1>Atelier Mboka</h1>
+            <p>Atelier MBOKA, meaning home-grown, something that comes naturally, is a fashion and accessories brand inspired by our natural environment and material culture to  design timeless pieces for the minimally bold woman.I was responsible for creating the brand guidelines, redesigning the logo and creating packaging design.</p>
         </div>
         <div style="float: left; width: 50%; margin-bottom: 20px;"> 
             <img src="https://drive.google.com/uc?export=view&id=10q28QbLuU3ayhmeZRMDzm03kk3T3zopt" width="500" alt="Atelir Mboka Header"/>
         </div>
 
-        <div style="margin: 0 auto; text-align: center; width: 100%; margin-bottom: 20px;">
+        <div style="float: right; margin-bottom: 20px;">
             <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="500" alt="Atelir Mboka logo"/>
         </div>
 
