image and text changes

--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -41,7 +41,7 @@
         </div>
 
         <div style="float: right; margin-bottom: 20px;">
-            <img src="https://drive.google.com/uc?export=view&id=1h00RaG8CZkHD-sR23M5eFCbYXwiRWnjN" width="500" alt="Atelir Mboka logo"/>
+            <img src="https://drive.google.com/uc?export=view&id=1Q8L0Hh2-jv-2keCYUXLilC3kQMAhEV6h" width="500" alt="Atelir Mboka Branding"/>
         </div>
 
         <div style="float: left; margin-bottom: 20px;"> 
