Hero Para midifications

--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -32,7 +32,7 @@
 <main>
     <div class="welcome-container">
       <div class="welcome-text">
-        <div style="float: right; margin-bottom: 20px;">  
+        <div style="text-align: center; width: 50%; margin-bottom: 20px;">
             <h1>Atelier Mboka</h1>
             <p>Atelier MBOKA, meaning home-grown, something that comes naturally, is a fashion and accessories brand inspired by our natural environment and material culture to  design timeless pieces for the minimally bold woman.I was responsible for creating the brand guidelines, redesigning the logo and creating packaging design.</p>
         </div>
