--- a/SallyPortfolio.html
+++ b/SallyPortfolio.html
@@ -114,7 +114,7 @@
 </ul>
 </footer>
 </div>
-<script src="script.js"></script>
+<!--<script src="script.js"></script>-->
 </div>
 
 <script type="text/javascript">
