--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="index.html"><i class="fas fa-home" style="color: #2b9ca2;"></i></a></li>
       <li><a href="aboutme.html">About me</a></li>
       <li class="dropdown">
-        <a href="DebbyPortfolio.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
+        <a href="deb.html" class="dropbtn">Portfolio <i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <!--        <a href="debby.html">Debby</a> -->
           <a href="lucas.html">Collection 1</a>
