--- a/lucas.html
+++ b/lucas.html
@@ -40,16 +40,16 @@
     </div>
 
     <div class="gallery" id="gallery">
-     <a href="images/pictures/1Copy.jpg"><img src="images/pictures/1.jpg"></a>
-     <a href="images/pictures/2Copy.jpg"><img src="images/pictures/2.jpg"></a>
-     <a href="images/pictures/3Copy.jpg"><img src="images/pictures/3.jpg"></a>
-     <a href="images/pictures/4Copy.jpg"><img src="images/pictures/4.jpg"></a>
-     <a href="images/pictures/5Copy.jpg"><img src="images/pictures/5.jpg"></a>
-     <a href="images/pictures/6Copy.jpg"><img src="images/pictures/6.jpg"></a>
-     <a href="images/pictures/7Copy.jpg"><img src="images/pictures/7.jpg"></a>
-     <a href="images/pictures/8Copy.jpg"><img src="images/pictures/8.jpg"></a>
-     <a href="images/pictures/9Copy.jpg"><img src="images/pictures/9.jpg"></a>
-     <a href="images/pictures/10Copy.jpg"><img src="images/pictures/10.jpg"></a>
+     <a href="Images/pictures/1Copy.jpg"><img src="Images/pictures/1.jpg"></a>
+     <a href="Images/pictures/2Copy.jpg"><img src="Images/pictures/2.jpg"></a>
+     <a href="Images/pictures/3Copy.jpg"><img src="Images/pictures/3.jpg"></a>
+     <a href="Images/pictures/4Copy.jpg"><img src="Images/pictures/4.jpg"></a>
+     <a href="Images/pictures/5Copy.jpg"><img src="Images/pictures/5.jpg"></a>
+     <a href="Images/pictures/6Copy.jpg"><img src="Images/pictures/6.jpg"></a>
+     <a href="Images/pictures/7Copy.jpg"><img src="Images/pictures/7.jpg"></a>
+     <a href="Images/pictures/8Copy.jpg"><img src="Images/pictures/8.jpg"></a>
+     <a href="Images/pictures/9Copy.jpg"><img src="Images/pictures/9.jpg"></a>
+     <a href="Images/pictures/10Copy.jpg"><img src="Images/pictures/10.jpg"></a>
    </div>
 
    <!--</footer>-------------------->
