--- a/deb.html
+++ b/deb.html
@@ -30,11 +30,11 @@
     	<p> Take a look through my two most recent projects. These projects are near and dear to my heart, and I am excited to have captured the essence of my subjects in these collections. I focus on lifestyle, capturing the essence of reality in each stroke. Both collections are a testament to my artistic journey, highlighting my commitment to portraying the world as I see it with honesty and clarity.</p>
     <div class="collections">
 <div class="collection" id="collection1">
-<img src="images/food.jpeg" alt="Collection 1 Image">
+<img src="Images/food.jpeg" alt="Collection 1 Image">
 <div class="collection-info">Collection One</div>
 </div>
 <div class="collection" id="collection2">
-<img src="images/baby.jpeg" alt="Collection 2 Image">
+<img src="Images/baby.jpeg" alt="Collection 2 Image">
 <div class="collection-info">Collection Two</div>
 </div>
 </div>
